# Car-Dealership

./: README.md
OOP7/: CMakeLists.txt  adddialog.cpp  adddialog.h  adddialog.ui  carviewdialog.cpp  carviewdialog.h  carviewdialog.ui  clientviewdialog.cpp  clientviewdialog.h  clientviewdialog.ui  errordialog.cpp  errordialog.h  errordialog.ui  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
OOP7/Controller/: carcontroller.cpp  carcontroller.h
OOP7/Domain/: electriccar.cpp  electriccar.h
OOP7/Repository/: carrepository.cpp  carrepository.h
OOP7/UI/: carui.cpp  carui.h
build-OOP7-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/: carList.csv  favList.csv
build-OOP7-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/OOP7_autogen/: mocs_compilation.cpp
build-OOP7-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/OOP7_autogen/include/: ui_adddialog.h  ui_carviewdialog.h  ui_clientviewdialog.h  ui_errordialog.h  ui_logindialog.h  ui_mainwindow.h
